# kicks-server-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  justfile
.github/workflows/: general.yaml
.sqlx/: query-1ce1002f1f7d682be3e20e9d0bbdcf7e9a28a7ca63568ae59edbb96961b754cf.json  query-20d2261feefcee4683e6948ce1307281d40f4938ffa139e7196ff479dfbdf42d.json  query-7d2a85241d5535a9fc46ae4e7766dbdb3adf24337996498302f9e0b9a1f2696c.json  query-a21b9dfbc5ddca55b802bf7086ccf452e8b0b1bb22c5b5749f0e4c8a6f063a3d.json  query-d84fb3a4deab2c174df495ab4a86a276b59a5bb5107df5a60cb3af95e24a0672.json  query-e5cbbb3fe2dc3e0d659b55eebd1966b88991f794b0d4b1470c75c221011dffe2.json  query-f2fdac5f21b0e79206ad02a7e207045ee7b8b5f4b0f010ddb9c0c9d3df34c190.json
configs/: test-ci.yaml
migrations/: 20260213025022_create_users_table.down.sql  20260213025022_create_users_table.up.sql
scripts/: init_db.sh
src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/clients/: email_client.rs  http_client.rs  mod.rs  redis_client.rs
src/common/: mod.rs  password_hashing.rs  random_token.rs  validator.rs
src/configuration/: app_config.rs  cloudinary_config.rs  database_config.rs  mod.rs  oauth2_config.rs  ratelimit_config.rs  redis_config.rs  smtp_config.rs
src/features/auth/: constants.rs  mod.rs  repository.rs
src/features/shared/: guards.rs  mod.rs  types.rs
src/middlewares/: authenticate.rs  error_logging.rs  mod.rs  request_logging.rs
tests/e2e/: mod.rs
tests/e2e/auth/: forgot_password.rs  get_me.rs  logout.rs  mod.rs  reset_password.rs  (+3 more)
(+43 files in other folders)
