[package]
name = "kicksapi"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = [
  "with-rejection",
  "cookie-signed",
] }
config = "0.15.19"
derive_more = { version = "2.1.1", features = ["from", "as_ref", "display"] }
lettre = { version = "0.11.19", features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls",
  "rustls-tls",
], default-features = false }
redis = { version = "1.0.3", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "time",
] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
time = { version = "0.3.46", features = ["serde"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = [
  "cors",
  "compression-gzip",
  "timeout",
] }
tower_governor = "0.8.0"
rand = "0.10.0"
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["registry", "json", "env-filter", ] }
unicode-segmentation = "1.12.0"
tracing-appender = "0.2.4"
reqwest = { version = "0.13.2", features = ["json", "cookies", "form"] }


[dev-dependencies]
futures = "0.3.31"
testcontainers = "0.27.0"
